...
    android:layout_height="match_parent"
    android:background="@color/SubtleBlack"
    android:orientation="vertical">


    <Button
        android:id="@+id/go_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/enter_fpool"
        app:layout_constraintBottom_toTopOf="@+id/progressBarYear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fact_tv_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="This is where the fact will be shown Even if the fact is very much long. Consisting of lorem ipsum"
...
