<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/SubtleBlack">



    <Button
        android:id="@+id/decrement_year"
        android:layout_width="55dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/down_arrow"
        android:layout_below="@id/year_edt"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/increment_btn_year"
        android:layout_width="55dp"
        android:layout_height="40dp"
        android:background="@drawable/up_arrow"
        android:layout_centerHorizontal="true"

 />


    <EditText
        android:id="@+id/year_edt"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@null"
        android:gravity="center"
        android:hint="@string/years_hint"
        android:inputType="number"
        android:maxLength="4"
        android:textColor="@color/white"
        android:textColorHint="#52FFFFFF"
        android:textSize="55sp"
        android:layout_below="@id/increment_btn_year"
        />

</RelativeLayout>