...
        android:gravity="center"
        android:text="Email"
        android:textColor="@color/white"
        android:layout_marginBottom="4dp"
        android:visibility="gone"
        android:fontFamily="@font/armata"
        app:layout_constraintBottom_toBottomOf="@+id/email"
        app:layout_constraintEnd_toStartOf="@+id/email"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="170dp"
...
        android:gravity="center"
        android:text="Password"
        android:textColor="@color/white"
        android:layout_marginBottom="4dp"
        android:visibility="gone"
        android:fontFamily="@font/armata"
        app:layout_constraintBottom_toBottomOf="@+id/password"
        app:layout_constraintEnd_toStartOf="@+id/password"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="170dp"
...
