...
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        android:indeterminateTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_tv" />


    <include
        android:id="@+id/include3"
        layout="@layout/snippet_auth_input_fields"
        android:layout_width="wrap_content"
...
